@@ -1,3 +1,4 @@
+2014-05-22 Added command reset to SourceList addon
 2014-05-21 Added possibility to style correct/wrong answers to Coloring module
 2014-05-20 Fixed issue with states in Line Number addon
 2014-05-16 Removed navigation pages for single page
